--- a/teacher/templates/teacher_upload.html
+++ b/teacher/templates/teacher_upload.html
@@ -22,9 +22,15 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="file">Upload CSV File</label>
-                    <input type="file" class="form-control-file" name="file" id="file" aria-describedby="fileHelp">
+                    <input  required type="file" class="form-control-file" name="file" id="file" aria-describedby="fileHelp">
                     <small id="fileHelp" class="form-text text-muted">Only Accepts CSV file</small>
                 </div>
+
+{#                <div class="form-group">#}
+{#                    <label for="zip_file">Upload Zip File</label>#}
+{#                    <input required type="file" class="form-control-file" name="zip_file" id="zip_file" aria-describedby="fileHelp">#}
+{#                </div>#}
+
                 <button class="btn btn-secondary mr-3" type="submit"> Upload</button>
             </form>
         {% endif %}
